<resources>
    <string name="app_name">Todolist Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="projects">Projekty</string>
    <string name="after_term">Po terminie</string>
    <string name="before_term">Przed terminem</string>
    <string name="add_task">Dodaj zadanie</string>
    <string name="name">Nazwa</string>
    <string name="save">Zapisz</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="user">Użytkownik</string>
    <string name="deadline">Termin</string>
    <string name="project">Projekt</string>
    <string name="completed">Ukończone</string>
    <string name="add_project">Dodaj projekt</string>
    <string name="edit_project">Edytuj projekt</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="logout">Wyloguj</string>
    <string name="task_name">Nazwa zadania</string>
    <string name="tasks">Zadania</string>
    <string name="notes">Notatki</string>
    <string name="updated_at">"Zaktualizowano: "</string>
    <string name="add">Dodaj</string>
    <string name="add_note">Dodaj notatkę</string>
    <string name="note_content">Treść notatki</string>
    <string name="back">Powrót</string>
</resources>