<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskFormActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/task_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/task_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_name_label" />

        <TextView
            android:id="@+id/task_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_form_name" />

        <Spinner
            android:id="@+id/task_form_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_user_label" />

        <TextView
            android:id="@+id/task_deadline_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_form_project" />

        <Button
            android:id="@+id/task_form_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_deadline_label" />

        <TextView
            android:id="@+id/task_project_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_form_user" />

        <Spinner
            android:id="@+id/task_form_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_project_label" />

        <TextView
            android:id="@+id/task_completed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_form_deadline" />

        <ToggleButton
            android:id="@+id/task_form_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_completed_label" />

        <Button
            android:id="@+id/task_form_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_form_completed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>