<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TaskListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/list_item_task_name_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/task_name"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="w,1:3"
            app:layout_constraintEnd_toStartOf="@+id/list_item_task_deadline_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_task_deadline_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/deadline"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="w,1:3"
            app:layout_constraintEnd_toStartOf="@+id/list_item_finished_label"
            app:layout_constraintStart_toEndOf="@+id/list_item_task_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_finished_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/completed"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="w,1:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/list_item_task_deadline_label"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_item_finished_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_lyt" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>